@@ -331,6 +331,9 @@ case "$1" in
 			omv_module_set_dirty nginx
 			omv_module_set_dirty postfix
 		fi
+		if dpkg --compare-versions "$2" lt-nl "6.0.6"; then
+			omv_module_set_dirty samba
+		fi
 
 		########################################################################
 		# Trigger the restart of the omv-engined daemon to load and use the
