@@ -27,7 +27,7 @@ import openmediavault.device
 import openmediavault.fs
 import openmediavault.net
 import openmediavault.stringutils
-# Import Salt libs
+
 import salt.utils.network
 from salt.utils.decorators.jinja import jinja_filter, jinja_test
 
